hard-coded some javac flags for lsif-java indexing